# repro-check

./: .gitignore  CHANGELOG.md  CITATION.cff  DEMO_end_to_end.json  LICENSE  README.md  RUNNABILITY_STUDY.json  SKILL.md  action.yml  pyproject.toml  requirements.txt
.github/: action_summary.py  make_badge.py
.github/workflows/: selftest.yml
benchmark/: README.md  fixtures_manifest.json  rescience_manifest.example.json  rescience_manifest.json  run_benchmark.py
demo/: README.md  quickstart.cast  quickstart.txt
examples/: badge-publish.yml  repro-check.yml
fixtures/example_notebook/: README.md  analysis.ipynb
fixtures/example_paper/: README.md  analysis.py  claims.json
fixtures/example_paper/data/: measurements.csv
fixtures/example_r_paper/: README.md  analysis.R
repro_check/: __init__.py  cli.py  engine.py
tests/: test_repro.py
